add hover button

--- a/LandingPage2.html
+++ b/LandingPage2.html
@@ -77,6 +77,10 @@
             padding: 8px 40px;
         }
 
+        .button__login:hover {
+            filter: brightness(70%);
+        }
+
         .button__forgot {
             background-color: transparent;
             font-size: 10px;
