--- a/LandingPage3.html
+++ b/LandingPage3.html
@@ -100,7 +100,13 @@
             padding: 10px 50px;
             margin-top: 10px;
             margin-left: -115px;
+            cursor: pointer;
         }
+
+        .button__submit:hover {
+            filter: brightness(60%);
+        }
+
 
         @media screen and (max-width: 992px) {
             .content__title {
