--- a/LandingPage1.html
+++ b/LandingPage1.html
@@ -18,6 +18,7 @@
             color: white;
             width: 100%;
             height: 175px;
+
         }
 
         .header__title {
@@ -76,6 +77,12 @@
             padding: 10px 50px;
             margin-top: 10px;
             margin-left: 110px;
+            cursor: pointer;
+            position: relative
+        }
+
+        .button__submit:hover {
+            filter: brightness(70%);
         }
 
         .footer {
@@ -86,6 +93,7 @@
             margin-top: -80px;
             display: flex;
             justify-content: center;
+            z-index: -1;
         }
 
         .footer__text--title {
@@ -177,7 +185,7 @@
                     <input class="input" type="text" />
                 </div>
             </div>
-            <button class="button__submit"><strong>SUBMIT</strong></button>
+            <button class="button__submit">SUBMIT</button>
         </div>
     </div>
     <div class="footer">
