--- a/LandingPage4.html
+++ b/LandingPage4.html
@@ -102,7 +102,13 @@
             padding: 10px 50px;
             margin-top: 10px;
             margin-left: -100px;
+            cursor: pointer;
         }
+
+        .button__submit:hover {
+            filter: brightness(70%);
+        }
+
 
         @media screen and (max-width: 992px) {
             .content__title {
