add form tag and button submit

--- a/LandingPage1.html
+++ b/LandingPage1.html
@@ -164,28 +164,30 @@
             Sebelum memulai, yuk isi data diri kamu:
         </div>
         <div class="content__form">
-            <div class="form__group">
-                <strong>Nama</strong>
-                <div class="form__input">
-                    <span>:</span>
-                    <input class="input" type="text" />
+            <form action="#">
+                <div class="form__group">
+                    <strong>Nama</strong>
+                    <div class="form__input">
+                        <span>:</span>
+                        <input class="input" type="text" name="name" />
+                    </div>
                 </div>
-            </div>
-            <div class="form__group">
-                <strong>Email</strong>
-                <div class="form__input">
-                    <span>:</span>
-                    <input class="input" type="text" />
+                <div class="form__group">
+                    <strong>Email</strong>
+                    <div class="form__input">
+                        <span>:</span>
+                        <input class="input" type="text" name="email" />
+                    </div>
                 </div>
-            </div>
-            <div class="form__group">
-                <strong>No.HP</strong>
-                <div class="form__input" style="margin-left: 56px;">
-                    <span>:</span>
-                    <input class="input" type="text" />
+                <div class="form__group">
+                    <strong>No.HP</strong>
+                    <div class="form__input" style="margin-left: 56px;">
+                        <span>:</span>
+                        <input class="input" type="text" name="phone" />
+                    </div>
                 </div>
-            </div>
-            <button class="button__submit">SUBMIT</button>
+                <button type="submit" class="button__submit">SUBMIT</button>
+            </form>
         </div>
     </div>
     <div class="footer">
